k8s-manifests/overlays/dev/superapp/client/devops/patch/dev-patch.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jenkins-hook
spec:
  replicas: 1
  template:
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
      - name: jenkins-hook
        image: superapp-registry.cbe.com.et:5000/cbe-superapp/cbe-jenkins-hook-dev:latest
        imagePullPolicy: Always

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-proxy
spec:
  replicas: 1
  template:
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
      - name: api-proxy
        image: superapp-registry.cbe.com.et:5000/cbe-superapp/api-proxy-dev:latest
        imagePullPolicy: Always
